[gd_scene load_steps=9 format=2]

[ext_resource path="res://ativos/crash-a-like.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ativos/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://telas/script_cena_opcoes.gd" type="Script" id=3]
[ext_resource path="res://componentes/cena_fundo_telas.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="CenaFundo" parent="." instance=ExtResource( 4 )]

[node name="Node2D" type="Node2D" parent="."]
z_index = 2

[node name="FundoTransp" type="ColorRect" parent="Node2D"]
margin_right = 1318.0
margin_bottom = 733.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="RichTextLabel" parent="Node2D"]
modulate = Color( 0.992157, 1, 0, 1 )
margin_left = 418.468
margin_top = 12.8284
margin_right = 605.468
margin_bottom = 77.8284
custom_fonts/normal_font = SubResource( 1 )
text = "OPÇÕES"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LblMusica" type="RichTextLabel" parent="Node2D"]
margin_left = 53.1458
margin_top = 273.34
margin_right = 191.146
margin_bottom = 323.34
custom_fonts/normal_font = SubResource( 2 )
text = "MÚSICA:"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SldMusica" type="HSlider" parent="Node2D"]
margin_left = 307.0
margin_top = 256.0
margin_right = 443.0
margin_bottom = 296.0
rect_scale = Vector2( 2, 2 )
min_value = -60.0
max_value = -5.0
value = -5.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LblSons" type="RichTextLabel" parent="Node2D"]
margin_left = 53.0
margin_top = 344.0
margin_right = 150.0
margin_bottom = 392.0
custom_fonts/normal_font = SubResource( 3 )
text = "SONS:"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SldSons" type="HSlider" parent="Node2D"]
margin_left = 305.0
margin_top = 337.0
margin_right = 442.0
margin_bottom = 377.0
rect_scale = Vector2( 2, 2 )
min_value = -60.0
max_value = -5.0
value = -5.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LblDificuldade" type="RichTextLabel" parent="Node2D"]
margin_left = 52.0
margin_top = 417.0
margin_right = 283.0
margin_bottom = 465.0
custom_fonts/normal_font = SubResource( 3 )
meta_underlined = false
text = "Dificuldade:"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="OptnDificuldade" type="OptionButton" parent="Node2D"]
margin_left = 305.5
margin_top = 424.5
margin_right = 486.5
margin_bottom = 444.5
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="Node2D"]
margin_left = 58.0
margin_top = 540.0
margin_right = 178.0
margin_bottom = 584.0
custom_fonts/font = SubResource( 4 )
text = "VOLTAR"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="Node2D/OptnDificuldade" to="." method="nivel_dificuldade_selecionado"]
[connection signal="pressed" from="Node2D/Voltar" to="." method="botao_voltar_cena_autenticado"]
